agregue el read de todas las categorias del menu

--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./js/administrador.js"></script>
-    <script type="module" src="./js/login.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script> -->
+    
+    
   </body>
 </html>
