--- a/pages/categorias/bebidas.html
+++ b/pages/categorias/bebidas.html
@@ -141,7 +141,7 @@
                     <a class="nav-link" href="./sandwiches.html">SÁNDWICHES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pizzas.html">PIZZAS</a>
+                    <a class="nav-link" href="./pizzas.html">PASTAS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="./bebidas.html">BEBIDAS</a>
