--- a/pages/categorias/postres.html
+++ b/pages/categorias/postres.html
@@ -141,7 +141,7 @@
                     <a class="nav-link" href="./sandwiches.html">SÁNDWICHES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pizzas.html">PIZZAS</a>
+                    <a class="nav-link" href="./pizzas.html">PASTAS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./bebidas.html">BEBIDAS</a>
@@ -153,37 +153,8 @@
         </section>
         <section class="my-5">
             <div class="container text-center">
-                <div class="row mt-4 menu-sandwich justify-content-evenly">
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-                    </div>
-                    <div class="card-bg ">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-                    </div>
-                    <div class="card-bg py-2">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-                    </div>
-                    <div class="card-bg">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
+                <div class="row mt-4 menu-sandwich justify-content-evenly" id="row">
+                  
                 </div>
               </div>
         </section>
@@ -219,5 +190,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
+    <script type="module" src="../../js/menuPostres.js"></script>
 </body>
 </html>
