agregue la funcion carga inicial de los menus

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     </footer>
 
     <!-- Ventana modal iniciar sesion -->
-    <div class="modal fade" id="iniciar-sesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modal-iniciar-sesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -439,7 +439,7 @@
     </div>
 
     <!-- Ventana modal registrarse -->
-    <div class="modal fade" id="registrarse" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modal-registrarse" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
